WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108086
[chromium] Missing include in AssertMatchingEnums.cpp
https://bugs.webkit.org/show_bug.cgi?id=108086
Summary
[chromium] Missing include in AssertMatchingEnums.cpp
Mike West
Reported
2013-01-28 08:32:08 PST
With SVG disabled, the Chromium build is currently broken due to a missing include in Source/WebKit/chromium/src/AssertMatchingEnums.cpp: ../../Source/WebKit/chromium/src/AssertMatchingEnums.cpp:634:63: error: no member named 'ResourceLoadPriorityVeryHigh' in namespace 'WebCore' COMPILE_ASSERT_MATCHING_ENUM(WebURLRequest::PriorityVeryHigh, ResourceLoadPriorityVeryHigh); ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WebKit/chromium/src/AssertMatchingEnums.cpp:131:61: note: expanded from macro 'COMPILE_ASSERT_MATCHING_ENUM' COMPILE_ASSERT(int(WebKit::webkit_name) == int(WebCore::webcore_name), mismatching_enums) ^ ../../Source/WebKit/chromium/base/basictypes.h:206:31: note: expanded from macro 'COMPILE_ASSERT' typedef CompileAssert<(bool(expr))> msg[bool(expr) ? 1 : -1] ^~~~ ../../Source/WebKit/chromium/src/AssertMatchingEnums.cpp:634:63: error: no member named 'ResourceLoadPriorityVeryHigh' in namespace 'WebCore' COMPILE_ASSERT_MATCHING_ENUM(WebURLRequest::PriorityVeryHigh, ResourceLoadPriorityVeryHigh); ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WebKit/chromium/src/AssertMatchingEnums.cpp:131:61: note: expanded from macro 'COMPILE_ASSERT_MATCHING_ENUM' COMPILE_ASSERT(int(WebKit::webkit_name) == int(WebCore::webcore_name), mismatching_enums) And so on...
Attachments
Patch
(1.41 KB, patch)
2013-01-28 08:34 PST
,
Mike West
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike West
Comment 1
2013-01-28 08:34:38 PST
Created
attachment 184989
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-28 08:56:31 PST
Comment on
attachment 184989
[details]
Patch Clearing flags on attachment: 184989 Committed
r140971
: <
http://trac.webkit.org/changeset/140971
>
WebKit Review Bot
Comment 3
2013-01-28 08:56:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug