[chromium] Unreviewed build fix, missing include in AssertMatchingEnums.cpp https://bugs.webkit.org/show_bug.cgi?id=108086

Disabling SVG exposed a missing include in AssertMatchingEnums. This
patch adds it in.


* src/AssertMatchingEnums.cpp:
    Include 'ResourceLoadPriority.h'.


Canonical link: https://commits.webkit.org/126280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140971 268f45cc-cd09-0410-ab3c-d52691b4dbfc